force-app/main/default/objects/Incentive_Contract_Parent_Seed_Goal__c/Incentive_Contract_Parent_Seed_Goal__c.object-meta.xml
<CustomObject>
    <label>Incentive Contract Parent Seed Goal</label>
    <nameField>
        <label>Incentive Contract Parent Seed Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Contract Parent Seed Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>