force-app/main/default/objects/Incentive_Contract_Parent_Seed_Goal__c/fields/Incentive_Contract__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive Contract</label>
    <referenceTo>Incentive_Contract__c</referenceTo>
    <relationshipLabel>Incentive Contract Parent Seed Goals</relationshipLabel>
    <relationshipName>Incentive_Contract_Parent_Seed_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>