force-app/main/default/objects/Incentive_Contract_Parent_Seed_Goal__c/fields/Quantities__c.field-meta.xml
<CustomField>
    <fullName>Quantities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>