force-app/main/default/objects/Incentive_Contract_Parent_Seed_Goal__c/fields/Unique_Varieties__c.field-meta.xml
<CustomField>
    <fullName>Unique_Varieties__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unique Varieties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>